# coreutils.hs

./: .gitignore  .travis.cabal.yml  .travis.yml  LICENSE  README.md  coreutils.cabal  tags
src/base64/: Args.hs  Base64.hs  Main.hs
src/cat/: Args.hs  Cat.hs  Main.hs
src/head/: Args.hs  Head.hs  Main.hs
src/lib/: Coreutils.hs
src/tr/: Args.hs  Main.hs  Tr.hs
src/uniq/: Args.hs  Main.hs  Uniq.hs
src/wc/: Args.hs  Main.hs  Wc.hs
src/yes/: Args.hs  Main.hs  Yes.hs
tests/functional/base64/: encode.t
tests/functional/cat/: files.t  numbering.t  squeeze.t  stdin.t
tests/functional/head/: bytes.t  lines.t  stdin.t  verbosity.t
tests/functional/tr/: escapes.t  ranges.t  translate.t
tests/functional/true/: true.t
tests/functional/wc/: bytes.t  chars.t  files.t  files0-from.t  lines.t  longest.t  no-arguments.t  words.t
tests/functional/yes/: yes.t
tests/unit/: Main.hs
tests/wc/: bytes.t  chars.t  files.t  files0-from.t  lines.t  longest.t  no-arguments.t  words.t
