name:          coreutils
description:   Learn Haskell by reimplementing the GNU Coreutils
version:       0.1.0.0
synopsis:      GNU coreutils reimplemented in Haskell
homepage:      https://github.com/mrak/coreutils
license:       MIT
license-file:  LICENSE
author:        Eric Mrak
maintainer:    mail@ericmrak.info
copyright:     2015
category:      System
build-type:    Simple
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/mrak/coreutils.hs

library
  hs-source-dirs:   src/lib
  exposed-modules:  Coreutils
  build-depends:    containers,
                    bytestring,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable cat
  main-is:          Main.hs
  hs-source-dirs:   src/cat
  other-modules:    Cat
                    Args
  build-depends:    optparse-applicative,
                    bytestring,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable tr
  main-is:          Main.hs
  hs-source-dirs:   src/tr
  other-modules:    Tr,
                    Args
  build-depends:    coreutils,
                    array,
                    bytestring,
                    optparse-applicative,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable wc
  main-is:          Main.hs
  hs-source-dirs:   src/wc
  other-modules:    Wc,
                    Args
  build-depends:    coreutils,
                    text,
                    bytestring,
                    optparse-applicative,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite unit
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests/unit,
                    src/lib,
                    src/wc,
                    src/tr,
                    src/cat
  build-depends:    coreutils,
                    tasty,
                    tasty-quickcheck,
                    text,
                    bytestring,
                    containers,
                    optparse-applicative,
                    base >= 4.8 && <4.9
  default-language: Haskell2010
