name:          coreutils
description:   Learn Haskell by reimplementing the GNU Coreutils
version:       0.1.0.0
synopsis:      GNU coreutils reimplemented in Haskell
homepage:      https://github.com/mrak/coreutils
license:       MIT
license-file:  LICENSE
author:        Eric Mrak
maintainer:    mail@ericmrak.info
copyright:     2015
category:      System
build-type:    Simple
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/mrak/coreutils.hs

library
  hs-source-dirs:   src/lib
  exposed-modules:  Coreutils
  build-depends:    containers,
                    bytestring,
                    optparse-applicative,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable base64
  main-is:          Main.hs
  hs-source-dirs:   src/base64
  other-modules:    Base64,
                    Args
  build-depends:    optparse-applicative,
                    base64-bytestring,
                    bytestring,
                    coreutils,
                    pipes,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable cat
  main-is:          Main.hs
  hs-source-dirs:   src/cat
  other-modules:    Cat,
                    Args
  build-depends:    coreutils,
                    optparse-applicative,
                    bytestring,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable head
  main-is:          Main.hs
  hs-source-dirs:   src/head
  other-modules:    Head,
                    Args
  build-depends:    coreutils,
                    optparse-applicative,
                    bytestring,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable tr
  main-is:          Main.hs
  hs-source-dirs:   src/tr
  other-modules:    Tr,
                    Args
  build-depends:    coreutils,
                    array,
                    bytestring,
                    pipes,
                    optparse-applicative,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable true
  main-is:          Main.hs
  hs-source-dirs:   src/true
  build-depends:    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable uniq
  main-is:          Main.hs
  hs-source-dirs:   src/uniq
  other-modules:    Uniq,
                    Args
  build-depends:    optparse-applicative,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable wc
  main-is:          Main.hs
  hs-source-dirs:   src/wc
  other-modules:    Wc,
                    Args
  build-depends:    coreutils,
                    text,
                    bytestring,
                    optparse-applicative,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable yes
  main-is:          Main.hs
  hs-source-dirs:   src/yes
  other-modules:    Yes,
                    Args
  build-depends:    optparse-applicative,
                    base >=4.8 && <4.9
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite unit
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests/unit,
                    src/lib,
                    src/wc,
                    src/tr,
                    src/cat
  build-depends:    coreutils,
                    tasty,
                    tasty-quickcheck,
                    text,
                    bytestring,
                    containers,
                    optparse-applicative,
                    base >= 4.8 && <4.9
  default-language: Haskell2010
